# iOpenPod

./: .gitignore  AGENTS.md  CONTEXT.md  DEVLOG.md  DEVLOG_SELECTIVE_SYNC.md  PLAN.md  README.md  design.md  iOpenPod.spec  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml  health.yml  release.yml
.hallmark/: log.json  preflight.json
docs/: GUI_DESIGN_SYSTEM.md  SYNC.md  TESTING_PLAN.md  deep_analysis_theories.md  iTunesCDB-internals.md  index.html  install-help.html  iokit-scsi-vpd.md  ipod-firmware-restore.md  ipod-playlist-datasets.md  site.css  sitemap.xml  tokens.css
docs/adr/: 0001-sync-session-orchestration.md
docs/agents/: domain.md
flatpak/: iOpenPod-wrapper.sh  io.github.therealsavi.iOpenPod.desktop  io.github.therealsavi.iOpenPod.metainfo.xml  io.github.therealsavi.iOpenPod.yml
scripts/: __init__.py  architecture_rules.json  check_architecture.py  generate_fake_music_library.py  ipod_caption_probe.py  manual_tracklist_column_persistence.py  smoke_test_installed_package.py  update_dialog_dev_tool.py
src/iopenpod/: __init__.py  __main__.py  resources.py  search.py  sync_progress_stages.py
src/iopenpod/application/: __init__.py  bootstrap.py  context.py  controllers.py  database_storage.py  device_access.py  device_identity.py  dropped_files.py  errors.py  jobs.py  progress.py  qt_runtime.py  runtime.py  services.py  sync_options.py  sync_plan_builder.py  sync_plan_merge.py  sync_review_model.py  sync_session.py
src/iopenpod/artworkdb_parser/: __init__.py  chunk_parser.py  constants.py  mhfd_parser.py  mhii_parser.py  mhli_parser.py  mhni_parser.py  mhod_parser.py  mhsd_parser.py  parser.py
src/iopenpod/artworkdb_shared/: __init__.py  binary.py  constants.py  ithmb_paths.py  mhlf.py  mhni.py  mhod.py
src/iopenpod/artworkdb_writer/: __init__.py  art_extractor.py  artwork_types.py  artwork_writer.py  artworkdb_chunks.py  ithmb_codecs.py  rgb565.py
src/iopenpod/device/: __init__.py  artwork.py  artwork_presets.py  authority.py  bootstrap.py  capabilities.py  checksum.py  diagnostic_log.py  dump.py  durability.py  eject.py  filesystem.py  filesystem_profile.py  images.py  info.py  lookup.py  metadata_write.py  models.py  path_safety.py  recovery.py  scanner.py  storage_safety.py  sysinfo.py  usb_backend.py  virtual.py  vpd_iokit.py  vpd_libusb.py  vpd_linux.py  vpd_usb_control.py  vpd_windows.py  write_guard.py  write_readiness.py
src/iopenpod/gui/: __init__.py  app.py  artwork_rendering.py  auto_updater.py  device_warnings.py  fonts.py  glyphs.py  hidpi.py  imgMaker.py  internal_drag.py  styles.py  (+3 more)
tests/: test_album_chapters.py  test_architecture_checks.py  test_artwork_links.py  test_artwork_registry.py  test_artwork_rendering.py  test_artwork_writer.py  test_audio_fingerprint_limits.py  test_auto_updater.py  test_backup_jobs.py  test_backup_restore_safety.py  test_cancel_controls.py  test_chapter_data_visibility.py  test_chapter_extraction.py  test_chaptered_aggregate_mapping.py  test_database_commit.py  test_database_storage_analysis.py  test_database_storage_browser.py  test_db_io.py  test_db_io_playlist_datasets.py  test_dependency_manager.py  test_device_access.py  test_device_authority_safety.py  test_device_bootstrap_safety.py  test_device_durability.py  test_device_eject.py  test_device_filesystem.py  test_device_identity_helpers.py  test_device_maintenance_writes.py  test_device_metadata_write.py  test_device_path_safety.py  test_device_scan_jobs.py  test_device_selection_guard.py  test_device_session_snapshots.py  test_device_storage_safety.py  test_device_write_guard.py  test_device_write_readiness.py  test_dropped_files.py  test_existing_track_matcher.py  test_fake_music_library_generator.py  test_feed_parser.py  (+97 more)
(+170 files in other folders)
