[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iopenpod"
version = "1.66.2"
description = "Open-source iPod Classic sync tool — manage your iPod media library without iTunes. Reads and writes iTunesDB directly."
authors = [
    {name = "John Gibbons", email = "johngibbons167@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "ipod", "ipod-classic", "itunes", "itunesdb", "music-sync",
    "ipod-manager", "pyqt6", "music-library", "ipod-sync",
    "itunes-alternative", "acoustic-fingerprint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "pyqt6>=6.9.1,<7.0.0",
    "numpy>=2.3.0,<3.0.0",
    "pillow>=11.2.1,<12.0.0",
    "pycryptodome>=3.20.0,<4.0.0",
    "mutagen>=1.47.0,<2.0.0",
    "pyusb>=1.3.1",
    "wasmtime>=30.0.0",
    "certifi>=2024.0.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "packaging>=23.0",
    "tqdm>=4.67.3",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
iopenpod = "iopenpod.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "nuitka>=4.0.3",
    "ordered-set>=4.1.0",
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.19.0",
    "ruff>=0.11.7",
    "zstandard>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iopenpod"]

[tool.flake8]
# Allow line breaks before binary operators (W503) — matches Black's style
extend-ignore = ["W503"]
# Keep line length reasonable; adjust if you prefer a different value
max-line-length = 320

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 320
target-version = "py311"
extend-exclude = ["compendium", "vendor"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = [
    "src/iopenpod/application/device_identity.py",
    "src/iopenpod/application/services.py",
    "src/iopenpod/application/context.py",
    "src/iopenpod/application/jobs.py",
    "src/iopenpod/application/progress.py",
    "src/iopenpod/application/sync_review_model.py",
    "src/iopenpod/application/sync_plan_builder.py",
    "src/iopenpod/application/sync_options.py",
    "src/iopenpod/application/sync_session.py",
    "src/iopenpod/infrastructure/settings_persistence.py",
    "src/iopenpod/infrastructure/settings_paths.py",
    "src/iopenpod/infrastructure/settings_runtime.py",
    "src/iopenpod/infrastructure/settings_schema.py",
    "src/iopenpod/infrastructure/settings_secrets.py",
    "src/iopenpod/infrastructure/version.py",
    "src/iopenpod/sync/contracts.py",
    "src/iopenpod/sync/database_commit.py",
    "src/iopenpod/sync/quick_writes.py",
    "scripts/check_architecture.py",
    "tests/test_architecture_checks.py",
    "tests/test_backup_jobs.py",
    "tests/test_settings_persistence.py",
    "tests/test_settings_secrets.py",
    "tests/test_settings_snapshot.py",
    "tests/test_device_session_snapshots.py",
    "tests/test_device_identity_helpers.py",
    "tests/test_device_scan_jobs.py",
    "tests/test_quick_writes.py",
    "tests/test_sync_review_model.py",
    "tests/test_sync_plan_builder.py",
    "src/iopenpod/__main__.py",
]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
